--- a/app/src/main/res/layout/fragment_backtest_result.xml
+++ b/app/src/main/res/layout/fragment_backtest_result.xml
@@ -176,7 +176,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
-                    android:text="Trades"
+                    android:text="@string/trades"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/divider_2" />
 
@@ -202,7 +202,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:text="Share"
+            android:text="@string/share"
             app:icon="@drawable/ic_baseline_share_24"
             app:iconGravity="textStart"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -216,7 +216,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="16dp"
-            android:text="Save"
+            android:text="@string/save"
             app:icon="@drawable/ic_baseline_favorite_border_24"
             app:iconGravity="textStart"
             app:layout_constraintBottom_toBottomOf="@+id/button_share_backtest"
