--- a/app/src/main/res/layout/fragment_my_strategy.xml
+++ b/app/src/main/res/layout/fragment_my_strategy.xml
@@ -5,9 +5,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scrollbars="none">
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/strategy_filter_chip_group"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
             app:chipSpacingVertical="0dp"
@@ -50,8 +54,7 @@
                 android:layout_height="wrap_content"
                 android:text="Custom" />
         </com.google.android.material.chip.ChipGroup>
-
-
+    </HorizontalScrollView>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/my_strategy_list"
