--- a/app/src/main/res/layout/fragment_indicator_list.xml
+++ b/app/src/main/res/layout/fragment_indicator_list.xml
@@ -10,55 +10,31 @@
         android:layout_height="wrap_content"
         style="@style/DisableLiftOnScroll">
 
-        <com.google.android.material.appbar.MaterialToolbar
+        <com.google.android.material.search.SearchBar
             android:id="@+id/indicator_app_bar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="wrap_content"
             app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
-            app:navigationIconTint="?attr/colorOnSurface"
-            app:menu="@menu/search_app_bar" />
+            android:hint="@string/search_hint"
+             />
     </com.google.android.material.appbar.AppBarLayout>
+
+    <com.google.android.material.search.SearchView
+        android:id="@+id/search_view_indicator_search"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:hint="@string/search_hint"
+        app:layout_anchor="@id/indicator_app_bar">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_indicator_search"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </com.google.android.material.search.SearchView>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-        <!--        <com.google.android.material.tabs.TabLayout-->
-        <!--            android:id="@+id/indicator_list_tab_layout"-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:elevation="4dp"-->
-        <!--            app:layout_constraintEnd_toEndOf="parent"-->
-        <!--            app:layout_constraintStart_toStartOf="parent"-->
-        <!--            app:layout_constraintTop_toTopOf="parent"-->
-        <!--            app:tabIndicatorFullWidth="false"-->
-        <!--            app:tabTextAppearance="@style/CustomTextAppearanceTab">-->
-
-        <!--            <com.google.android.material.tabs.TabItem-->
-        <!--                android:layout_width="wrap_content"-->
-        <!--                android:layout_height="wrap_content"-->
-        <!--                tools:text="Technical" />-->
-
-        <!--            <com.google.android.material.tabs.TabItem-->
-        <!--                android:layout_width="wrap_content"-->
-        <!--                android:layout_height="wrap_content"-->
-        <!--                tools:text="Price" />-->
-
-        <!--            <com.google.android.material.tabs.TabItem-->
-        <!--                android:layout_width="wrap_content"-->
-        <!--                android:layout_height="wrap_content"-->
-        <!--                tools:text="Other" />-->
-        <!--        </com.google.android.material.tabs.TabLayout>-->
-
-        <!--        <androidx.viewpager2.widget.ViewPager2-->
-        <!--            android:id="@+id/indicator_list_view_pager"-->
-        <!--            android:layout_width="0dp"-->
-        <!--            android:layout_height="0dp"-->
-        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--            app:layout_constraintEnd_toEndOf="parent"-->
-        <!--            app:layout_constraintStart_toStartOf="parent"-->
-        <!--            app:layout_constraintTop_toBottomOf="@id/indicator_list_tab_layout" />-->
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/chip_group_indicator_type"
