--- a/app/src/main/res/layout/fragment_portfolio_input.xml
+++ b/app/src/main/res/layout/fragment_portfolio_input.xml
@@ -24,7 +24,7 @@
             android:layout_height="?attr/actionBarSize"
             app:menu="@menu/date_confirm_app_bar"
             app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
-            app:title="Edit Holding" />
+            app:title="@string/edit_holding" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
